# ChangeLog for dev-ruby/mkrf
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/ChangeLog,v 1.33 2013/07/08 05:10:16 graaff Exp $

  08 Jul 2013; Hans de Graaff <graaff@gentoo.org> -mkrf-0.2.3-r1.ebuild:
  Cleanup.

  08 Jan 2013; Andreas Schuerch <nativemad@gentoo.org> mkrf-0.2.3-r2.ebuild:
  x86 stable, needed for bug 430206

  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org> mkrf-0.2.3-r2.ebuild:
  stable ppc, bug #430206

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> mkrf-0.2.3-r2.ebuild:
  Stable for HPPA (bug #430206).

  05 Oct 2012; Brent Baude <ranger@gentoo.org> mkrf-0.2.3-r2.ebuild:
  Marking mkrf-0.2.3-r2 ppc64 for bug 430206

  27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> mkrf-0.2.3-r2.ebuild:
  Keyword ~ppc64 wrt #422887

  11 Aug 2012; Agostino Sarubbo <ago@gentoo.org> mkrf-0.2.3-r2.ebuild:
  Stable for amd64, wrt bug #430206

  08 Aug 2012; Hans de Graaff <graaff@gentoo.org> mkrf-0.2.3-r2.ebuild:
  Workaround to make test pass with ruby19 and rake 0.8. This is already fixed
  with rake 0.9. Fixes bug 430324.

  09 Jul 2012; Jeroen Roovers <jer@gentoo.org> mkrf-0.2.3-r2.ebuild:
  Marked ~hppa (bug #422887).

  01 Jul 2012; Raúl Porcel <armin76@gentoo.org> mkrf-0.2.3-r1.ebuild,
  mkrf-0.2.3-r2.ebuild:
  Drop alpha keywords

  01 May 2012; Raúl Porcel <armin76@gentoo.org> mkrf-0.2.3-r1.ebuild,
  mkrf-0.2.3-r2.ebuild:
  Drop ia64/sparc keywords

  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> mkrf-0.2.3-r1.ebuild,
  mkrf-0.2.3-r2.ebuild:
  Drop ruby19 from the right revision.

*mkrf-0.2.3-r2 (28 Dec 2011)

  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> +mkrf-0.2.3-r2.ebuild:
  Revision bump to drop ruby19 from stable version.

  15 Jan 2011; Hans de Graaff <graaff@gentoo.org> -mkrf-0.2.3.ebuild:
  Remove old version.

  20 Oct 2010; Brent Baude <ranger@gentoo.org> mkrf-0.2.3-r1.ebuild:
  Marking mkrf-0.2.3-r1 ppc for bug 329807
