@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/mkrf-0.2.3-r2.ebuild,v 1.12 2013/01/08 08:39:53 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/mkrf-0.2.3-r2.ebuild,v 1.13 2013/10/29 16:23:47 graaff Exp $
 
 EAPI="2"
 USE_RUBY="ruby18 ruby19"
@@ -25,6 +25,8 @@ KEYWORDS="amd64 hppa ppc ppc64 x86"
 IUSE=""
 
 DEPEND="${DEPEND} test? ( virtual/libiconv dev-libs/libxml2 )"
+
+RESTRICT="test"
 
 each_ruby_test() {
 	RUBYLIB=. ${RUBY} -S rake test:integration || die
