@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST opengl-0.8.0.gem 458240 SHA256 cf6bed386dcf59749e089c3b9c4bfa9e7dae125b2e83d157e497ef332afcfd23 SHA512 cbae860fe5a486dfa6ff5f4a2d381cc000ae89f3ac386885416c2cab7e03266f017e456ce95ea83c559784e6ab50e18a947003bad9e420fcabed3ab63abd9965 WHIRLPOOL a3ae1f2ca9f22836b7376b1fff3e464eae4984bdd6a167e0a379f09e02f1b09a78962617572511f09261e5edcd3a01210cb43cb3d57b1f8b9186a3dc2e2ff3c0
 DIST ruby-opengl-0.60.1.gem 245248 SHA256 aeeeac200acc0e7dad0f59dc47426ed7d3254c77f560cf3dfdecbdee5fa4ab7e SHA512 2ddb8acf3e74f48b173a6f5421f6ba57c82f6871d1f332dfe2c7a73a23de70b0e04d080dff103a03d369314c9b1bed19419e6c68a320d5faa1f310d436379624 WHIRLPOOL 3fcac347326d5a52668c45895e6df2693e4b4f63f336a95a7cd5bc1966493ef7e639369e2de9d19581e2341684c4109e09ecd2c94b0bfffd708ffbea63da3064
 EBUILD ruby-opengl-0.60.1-r2.ebuild 1356 SHA256 797904785d35b4002a7221aa0c4f48b5880b3d8b41f1ff618bc4769c6e70a562 SHA512 e80c888be4ded12321728187c3e2018d5e1b2c7071f83a9b647c42c730c620c16af7891cab92f400f3974f2f50d5ac3841f4ae7bae017cd0979681cabc0bd66c WHIRLPOOL e349bce458123f48eb55ec46d5ae0fc793436b020cf423db807960aff37c65004d7b34394eb249682fd4a4d01f173b88107ebc32247906a3f2ea60529ec3ceff
-MISC ChangeLog 7878 SHA256 0830e292f293319aa1bc9539fad76b5bf35a59610bb4ced87a133ab14f42d7eb SHA512 11f9faada06b02b3b51cffa47e474df6dd1487d999816fbf956f32d9c7778d94efbdc198f1c5c9266809b548975375e12dab6d23350462f6a89317800110ea14 WHIRLPOOL dcf961bb7731afc70a13535f57ebd5c1c17b97a0cc0bc7407aaaa782d0ad5080757da6454c578a5af74efe997acfa4ec59038a6fe7e79ae7bc853d08e69b3000
+EBUILD ruby-opengl-0.8.0.ebuild 1183 SHA256 422f01bcb866b43ba6a4f09a455e6805db0a30fbb2fdc9791eb6d83c4b5d90cf SHA512 0121144d7f392d0afeb832af84a9abfe091c87ab4c339efe23c7d818a118a5a2e170320b323cd8eaa18f67183df52e0d0636038c4b517d670486d9c75e5ca1b5 WHIRLPOOL 1b7d99901918d09708fbce98bd435b88426c3952bd3fe954b624697e9d002f670e916d0cea17b757fc171f300b4517a4ee9522787ebc4753d73d96d4028654d1
+MISC ChangeLog 8077 SHA256 7b3a9403378090db13738677889b10831e95f059cc95da2d9a01d598506b3a0c SHA512 9e0ad9d4e0044a1cb2e11d47ec91f935d37ee9bf9a66446b049102b984a0d5cc15894224e4c991fc1b17912bbaa362983a178c9e7e4310c1423416ce4324281e WHIRLPOOL 073a82c301d3b9cab244123a97393d54c2b305211b563ab2aeb8e1233efa7e1a395b0b6cd71bb02d698077f7e21002a667fae85bfa6d25bc226b3be896f41b7d
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlFs4yMACgkQiIP6VqMIqNeXhAD/dglDQBn99zp/ChjmFdDn8DnE
-EO7YPGAN9D1rv1nDAu0A/3+8u/blwblMjA5Vuk1LEE05F8qAjwijPR4QODrpHZ5+
-=8aVp
+iF4EAREIAAYFAlJv4HkACgkQiIP6VqMIqNeylgD/TEmMZej3+IiBTHP1JE5RqwVB
+GjI8NihvqkNdM9qIxP8A/15Dr/uzRWf7J+l6b4GfYYWb5TXhvCN9KWZb0TYXVV4F
+=zC1X
 -----END PGP SIGNATURE-----
