@@ -7,7 +7,8 @@ IUSE=elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 doc test test
 KEYWORDS=amd64 hppa ppc ppc64 x86
 LICENSE=MIT
 RDEPEND=test? ( virtual/libiconv dev-libs/libxml2 ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
+RESTRICT=test
 SLOT=0
 SRC_URI=mirror://rubygems/mkrf-0.2.3.gem
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=a5183d9a3b4717c669439e8b67f3b72a
+_md5_=66b9a9f717e81f43c80c2fae23f0ee63
