@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ruby-opengl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-opengl/ChangeLog,v 1.58 2013/04/16 05:35:25 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-opengl/ChangeLog,v 1.59 2013/10/29 16:21:12 graaff Exp $
+
+*ruby-opengl-0.8.0 (29 Oct 2013)
+
+  29 Oct 2013; Hans de Graaff <graaff@gentoo.org> +ruby-opengl-0.8.0.ebuild:
+  Version bump. Dropped ruby18 since it is no longer supported upstream. Add
+  ruby20.
 
   16 Apr 2013; Hans de Graaff <graaff@gentoo.org>
   -ruby-opengl-0.60.1-r1.ebuild:
